Fixed text behind delete button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,8 @@
     opacity: 1; 
     transition: opacity 1s ease-out;
 }
+
+.card-body {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
